kubernetes/hotelservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelservice-deployment
  namespace: dev
  labels:
    app: hotelservice-deployment-label

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hotelservice

  template:
    metadata:
      labels:
        app: hotelservice

    spec:
      nodeSelector:
        workload: private

      containers:
        - name: hotelservice-container
          image: 186581960368.dkr.ecr.ap-south-1.amazonaws.com/hotelservice:v4

          ports:
            - containerPort: 8082
---

kind: Service
apiVersion: v1
metadata:
  name: hotelservice-service
  namespace: dev
spec:
  selector:
    app: hotelservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
  type: ClusterIP
