kubernetes/serviceregistry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceregistry-deployment
  namespace: dev
  labels:
    app: serviceregistry-deployment-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceregistry
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: serviceregistry
    spec:
      nodeSelector:
        workload: private

      containers:
        - name: serviceregistry-container
          image: 186581960368.dkr.ecr.ap-south-1.amazonaws.com/serviceregistry:v2

          ports:
            - containerPort: 8761
---

kind: Service
apiVersion: v1
metadata:
  name: serviceregistry-service
  namespace: dev
spec:
  selector:
    app: serviceregistry
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
