kubernetes/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  namespace: dev
  labels:
    app: userservice-deployment-label

spec:
  replicas: 1

  selector:
    matchLabels:
      app: userservice

  template:
    metadata:
      labels:
        app: userservice

    spec:
      nodeSelector:
        workload: private

      containers:
        - name: userservice-container
          image: 186581960368.dkr.ecr.ap-south-1.amazonaws.com/userservice:v6

          ports:
            - containerPort: 8081
---

kind: Service
apiVersion: v1
metadata:
  name: userservice-service
  namespace: dev
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
  type: ClusterIP
