kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: eks-alb
    alb.ingress.kubernetes.io/healthcheck-path: /registry
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /registry
            pathType: Prefix
            backend:
              service:
                name: serviceregistry-service
                port:
                  number: 8080
